Changes for 4.4.0alpha1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 4.2.1rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 4.2.0

4.2.0rc2 was released as 4.2.0 without any changes

--------------------------------------------------------------------------------
Changes for 4.2.0rc2

New features:
..F....... [ZBXNEXT-5109] implemented test value saving before test sessions in preprocessing test forms (miks)
..F.....S. [ZBXNEXT-1238,ZBXNEXT-4988] added ability to test media types from UI (Ivo, vso)
..F....... [ZBXNEXT-5114] improved multiline input control (ashubin)
...G...... [ZBXNEXT-5123] added server address and port to the Zabbix sender output (wiper)

Bug fixes:
..F....... [ZBX-15839] fixed broken layout of the breadcrumbs in Safari browser (ashubin)
........S. [ZBX-15867] fixed invalid DNS being accepted when receiving discovery contents from Zabbix proxy (vso)
A......... [ZBX-15821] fixed SQL statement performance used in template.unlink() method (Sasha)
.......PS. [ZBX-15578] fixed IPMI errors in case of infrequent reading of values (asitals)
........S. [ZBX-15862] fixed processing of long (megabytes) preprocessing test results (wiper)
..F....... [ZBX-15098] fixed undefined index in application selection popup window (Ivo)
........S. [ZBX-15840] fixed the type of pre-installed first email media as "text/plain" (MVekslers)
..F....... [ZBX-15351] fixed PHP error in "Problems by severity" if no problems (vasilijs)
.........T [ZBX-8907] fixed weird description for queue trigger in templates (akozlovs)

--------------------------------------------------------------------------------
Changes for 4.2.0rc1

New features:
..F....... [ZBXNEXT-5105] added context menu for trigger name in event details page (agriscenko)