@@ -245,6 +245,14 @@ zbx_odbc_data_source_t	*zbx_odbc_connect(const char *dsn, const char *user, cons
 
 				if (SUCCEED == zbx_odbc_diag(SQL_HANDLE_DBC, data_source->hdbc, rc, &diag))
 				{
+					/* look for user in data source instead of no user */
+					if ('\0' == *user)
+						user = NULL;
+
+					/* look for password in data source instead of no password */
+					if ('\0' == *pass)
+						pass = NULL;
+
 					rc = SQLConnect(data_source->hdbc, (SQLCHAR *)dsn, SQL_NTS, (SQLCHAR *)user,
 							SQL_NTS, (SQLCHAR *)pass, SQL_NTS);
 
