@@ -10,6 +10,7 @@ Changes for 4.2.1rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-15634] fixed NULL username and password are used instead of blank in ODBC monitoring (akozlovs)
 
 --------------------------------------------------------------------------------
 Changes for 4.2.0
@@ -265,6 +266,7 @@ Changes for 4.0.7rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-15634] fixed NULL username and password are used instead of blank in ODBC monitoring (akozlovs)
 
 --------------------------------------------------------------------------------
 Changes for 4.0.6
